# OctoPrint-Marlin-Flasher

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
extras/: README.txt  marlin_flasher.md
octoprint_marlin_flasher/: __init__.py  arduino_flasher.py  flasher.py  platformio_flasher.py
octoprint_marlin_flasher/flasher/: __init__.py  arduino_flasher.py  base_flasher.py  flasher_error.py  marlin_flasher.py  platform_type.py  platformio_flasher.py  platformio_remote.py  request_validation.py  retrieving_method.py  unsupported_flasher.py
octoprint_marlin_flasher/settings/: __init__.py  settings_wrapper.py
octoprint_marlin_flasher/static/css/: marlin_flasher.css
octoprint_marlin_flasher/static/js/: bootstrap-table.js  marlin_flasher.js
octoprint_marlin_flasher/templates/: marlin_flasher.jinja2  marlin_flasher_about.jinja2  marlin_flasher_settings.jinja2  marlin_flasher_tab.jinja2  marlin_flasher_wizard.jinja2
octoprint_marlin_flasher/templates/includes/: compile_output.jinja2  config.jinja2  header_warning.jinja2  maxSize_warning.jinja2
octoprint_marlin_flasher/validation/: __init__.py  arduino_validator.py  base_validator.py  platformio_validator.py  request_validator.py  unsupported_validator.py
octoprint_marlin_flasher/validation/validators/: __init__.py  arduino.py  platformio.py  (+1 more)
octoprint_marlin_flasher/validator/: arduino_validator.py  base_validator.py  platformio_validator.py  request_validator.py  validator_error.py
translations/: README.txt
(+15 files in other folders)
