[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Marlin-Flasher"
version = "1.1.0rc1"
description = "Plugin that allows you to flash your printer with the latest Marlin version, or Arduino code"
authors = [
    { name = "Renaud Gaspard", email = "gaspardrenaud@hotmail.com" },
]
requires-python = ">=3.7,<4"
dependencies = [
    "pyduinocli>=0.35.0,<0.36",
    "intelhex",
    "requests",
    "virtualenv",
    "flask>=0.10.1",
]
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
marlin_flasher = "octoprint_marlin_flasher"

[project.urls]
Homepage = "https://github.com/Renaud11232/Octoprint-Marlin-Flasher"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_marlin_flasher",
    "octoprint_marlin_flasher.*",
]
